pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  namespace: asv
  labels:
    app: myapp
spec:
  containers:
  - name: myapp-container
    image: zhamdaoui/myapp-web-app:v1
    ports:
        - containerPort: 8080
          protocol: TCP
