service.yaml
kind: Service
apiVersion: v1
metadata:
  name: myapp-service
  namespace: asv
  labels:
    app: myapp
spec:
  ports:
    - name: web
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: myapp
  type: ClusterIP
